--- a/pass_1a/metabolomics_data_analysis.Rmd
+++ b/pass_1a/metabolomics_data_analysis.Rmd
@@ -1,9 +1,11 @@
 ---
 title: "BIC metabolomics data analysis"
 output:
-  pdf_document: 
-    number_sections: true
+  html_document:
+    df_print: paged
   html_notebook: default
+  pdf_document:
+    number_sections: yes
 ---
 
 In this document we present the joint analysis of the PASS1A metabolomics datasets.
@@ -138,7 +140,7 @@ Important: datasets that do not have unique metabolite names or sample ids proba
 
 Finally we add an additional version for each dataset by directly regressing out the sample order component. See https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4757603/ for more details (trend correction is also called background correction, and this is done for each batch separately).
 
-```{r,message=FALSE,warning=FALSE}
+```{r,eval=FALSE,message=FALSE,warning=FALSE}
 metabolomics_processed_datasets = c()
 # set a binary vector indicating with entries to skip
 metabolomics_raw_datasets_skip = rep(F,length(metabolomics_parsed_datasets))
@@ -381,7 +383,7 @@ corrplot(t(num_nonnormal_log)- t(num_nonnormal_unlog),
 
 Compare overlaps, effect sizes, and correlations within tissues. Compare targeted-untargeted pairs only. For differential analysis we use the same model as in the analysis above.
 
-```{r,out.height='50%',out.width='50%',message=T,warning=FALSE}
+```{r,out.height='50%',out.width='50%',message=FALSE,warning=FALSE}
 
 # helper function to transform a metabolomics matrix
 # to that of its motrpac compound ids
@@ -415,14 +417,9 @@ for(nn1 in names(metabolomics_processed_datasets)){
     nn2_dataset = strsplit(nn2,split=",")[[1]][2]
     if(nn1_tissue!=nn2_tissue){next}
     print(nn2)
-    # get the numeric dataset
+    # get the numeric datasets and their annotation
     x = metabolomics_processed_datasets[[nn1]]$sample_data
-    # x = log2(x+1)
     y = metabolomics_processed_datasets[[nn2]]$sample_data
-    # print(paste("dataset1:",nn1))
-    # print(range(x))
-    # print(paste("dataset2:",nn2))
-    # print(range(y))
     row_annot_x = metabolomics_processed_datasets[[nn1]]$row_annot
     row_annot_y = metabolomics_processed_datasets[[nn2]]$row_annot
     # transform metabolite names to the motrpac comp name
@@ -461,7 +458,7 @@ for(nn1 in names(metabolomics_processed_datasets)){
       shared_metabolites
     )
     
-    # Get statistics
+    # Compute the correlation matrices of the shared metabolites
     if(length(shared_metabolites)>1){
           corrs =cor(t(x[shared_metabolites,]),
                 t(y[shared_metabolites,]),method = "spearman")
@@ -471,15 +468,11 @@ for(nn1 in names(metabolomics_processed_datasets)){
                 y[shared_metabolites,],method = "spearman")
     }
     
-    # take the covariates, ignore distances
+    # take the covariates (ignore distances)
     curr_cov_cols = intersect(colnames(y_meta),biospec_cols[2])
     curr_covs = data.frame(y_meta[,curr_cov_cols])
     names(curr_covs) = curr_cov_cols
-    # # scale
-    # for(cov_name in names(curr_covs)){
-    #   curr_covs[[cov_name]] = scale(curr_covs[[cov_name]],center = T,scale = T)
-    # }
-    curr_covs$sex = y_meta$animal.registration.sex
+    curr_covs$sex = y_meta$animal.registration.sex # add sex
     
     # differential analysis
     for(tp in unique(y_meta$animal.key.timepoint)){
@@ -498,9 +491,11 @@ for(nn1 in names(metabolomics_processed_datasets)){
         covs = curr_covs,return_model=F
       ))
       # Add dataset information, time point, tissue
+      # These are important annotations for our summary matrix
+      # called single_metabolite_de below
       added_columns = matrix(cbind(
-        rep(nn1_dataset,length(shared_metabolites)),
-        rep(nn2_dataset,length(shared_metabolites)),
+        rep(nn1,length(shared_metabolites)),
+        rep(nn2,length(shared_metabolites)),
         shared_metabolites,
         rep(tp,length(shared_metabolites)),
         rep(nn1_tissue,length(shared_metabolites))
@@ -553,9 +548,9 @@ single_metabolite_de = unique(single_metabolite_de)
 
 ```
 
-We next transform the data above into tables that contain data for each combination of metabolite, time point, and tissue. These are then used for two meta-analyses: (1) a simple random effects analysis, and (2) random effects with a binary covariate indicating if a dataset is targeted or untargeted.
+We next transform the data above into tables that contain data for each combination of metabolite, time point, and tissue. These are then used for different meta-analyses: (1) a simple random effects analysis, (2) random effects with a binary covariate indicating if a dataset is targeted or untargeted, (3) redo the RE model of (1) with the targeted data only, and (4) redo the RE model of (1) with the untargeted data only.
 
-```{r,out.height='50%',out.width='50%',message=F,warning=FALSE}
+```{r,out.height='50%',out.width='50%',message=FALSE,warning=FALSE}
 
 library(metafor)
 meta_analysis_stats = list()
@@ -594,10 +589,13 @@ for(tissue in unique(single_metabolite_de$tissue)){
 
 ## Comparison results
 
-We now show some plots to summarize the comparison. We plot the overall average correlation between the platforms (within tissues). However, going into a single metabolite comparison in detail (again, within tissues), for each metabolite, in each time point we perform a meta-analysis of the effects and examine the significance and heterogeneity.
+We now show some plots to summarize the comparison. 
 
-```{r,out.height='50%',out.width='50%',message=F,warning=FALSE}
-# Do we have nice coverages of the named datasets?
+### Dataset coverage 
+
+We first plot the number and percentage of metabolites in the targeted datasets that are measured in at least one untargeted dataset.
+
+```{r,out.height='50%',out.width='50%',message=FALSE,warning=FALSE}
 library(ggplot2)
 dataset2num_metabolites = sapply(metabolomics_processed_datasets, 
                                  function(x)nrow(x$sample_data))
@@ -632,9 +630,17 @@ print(ggplot(named_dataset_coverage, aes(x=name, y=percentage)) +
             size=4) + 
   ggtitle("Targeted dataset: coverage by untargeted"))
 
+```
 
+### Spearman correlations
+
+We examine the average absolute correlation between the platforms (within tissues). Whenever two platforms share more than a single metabolite we plot both the average correlation between the same metabolites and between other metabolites. Adding the average correlation between platforms but with different metabolites is important as it gives some perspective to what a significant correlation is. That is, in many cases below, the average correlation may be greater than expected.
+
+```{r,out.height='50%',out.width='50%',message=FALSE,warning=FALSE}
 # Next examine the Spearman correlations between platforms
-extract_diag_vs_non_diag<-function(corrs,func=mean,...){
+mean_abs<-function(x,...){return(mean(abs(x),...))}
+sd_abs<-function(x,...){return(sd(abs(x),...))}
+extract_diag_vs_non_diag<-function(corrs,func=mean_abs,...){
   if(length(corrs)==1){
     return(c(same=func(corrs,...),other=NA))
   }
@@ -643,14 +649,12 @@ extract_diag_vs_non_diag<-function(corrs,func=mean,...){
     c(corrs[lower.tri(corrs,diag = F)]),...)
   return(c(same=same,other=other))
 }
-# tar_dataset2tissue = sapply(names(single_metabolite_corrs),
-#       function(x)strsplit(x,split=",")[[1]][1])
-# tar_dataset2tissue = gsub("_powder","",tar_dataset2tissue)
+
 for(tar_dataset in names(single_metabolite_corrs)){
   l = single_metabolite_corrs[[tar_dataset]]
   if(length(l)==0){next}
   corr_info = as.data.frame(t(sapply(l, extract_diag_vs_non_diag)))
-  corr_sd = as.data.frame(t(sapply(l, extract_diag_vs_non_diag,func=sd)))
+  corr_sd = as.data.frame(t(sapply(l, extract_diag_vs_non_diag,func=sd_abs)))
   rownames(corr_info) = sapply(rownames(corr_info),
       function(x)strsplit(x,split=",")[[1]][2])
   rownames(corr_info) = gsub("metab_u_","",rownames(corr_info))
@@ -670,19 +674,53 @@ for(tar_dataset in names(single_metabolite_corrs)){
       theme(legend.position="top",legend.direction = "horizontal")
   )
 }
+```
 
-# Look at the meta-analysis results
-# Check glucose and lactate in muscle
+### Meta-analysis of differential effects
+
+Here we go into the single metabolites comparison in greater detail (again, within tissues). 
+
+We start with a few examples. Here are the results for lactate in plasma.
+
+```{r,out.height='50%',out.width='50%',message=FALSE,warning=FALSE}
 lact_res = meta_analysis_stats[
-  grepl("lact",names(meta_analysis_stats),ignore.case = T)
+  grepl("lact",names(meta_analysis_stats),ignore.case = T) &
+    grepl("plasma",names(meta_analysis_stats),ignore.case = T)
 ]
-for(lact_example in names(lact_res)){
+lact_res_hours = sapply(names(lact_res),
+            function(x)as.numeric(strsplit(x,split=",")[[1]][3]))
+lact_res = lact_res[order(lact_res_hours)]
+for(lact_example in names(lact_res)[1:6]){
   forest(meta_analysis_stats[[lact_example]]$re_model1,
        slab = meta_analysis_stats[[lact_example]][[1]][,1],
        main = lact_example,xlab = "Log fc",
        col = "blue",cex = 1.1)
 }
 
+```
+
+We can now check the same analysis for liver:
+
+```{r,out.height='50%',out.width='50%',message=FALSE,warning=FALSE}
+lact_res = meta_analysis_stats[
+  grepl("lact",names(meta_analysis_stats),ignore.case = T) &
+    grepl("liver",names(meta_analysis_stats),ignore.case = T)
+]
+lact_res_hours = sapply(names(lact_res),
+            function(x)as.numeric(strsplit(x,split=",")[[1]][3]))
+lact_res = lact_res[order(lact_res_hours)]
+for(lact_example in names(lact_res)[1:6]){
+  forest(meta_analysis_stats[[lact_example]]$re_model1,
+       slab = meta_analysis_stats[[lact_example]][[1]][,1],
+       main = lact_example,xlab = "Log fc",
+       col = "blue",cex = 1.1)
+}
+
+```
+
+We now move to a systematic comparison of the datasets. We start with a naive comparison, checking if metabolites are consistently being discovered using a simple $p=0.001$ threshold for significance.
+
+```{r,out.height='50%',out.width='50%',message=FALSE,warning=FALSE}
 # Naive comparison
 thr = 0.001
 naive_analysis_tables = lapply(meta_analysis_stats,
@@ -691,43 +729,113 @@ naive_analysis_tables = lapply(meta_analysis_stats,
 table_with_sig_results = naive_analysis_tables[
   sapply(naive_analysis_tables,nrow)>1
 ]
+percent_with_sig = 
+  length(table_with_sig_results)/length(naive_analysis_tables)
 
+sig_results = sapply(table_with_sig_results,
+      function(x)paste(x["TRUE",c("0","1")]>0,collapse=","))
+sig_results_counts = table(sig_results)
+
+print("Counting the number of metabolites with p<0.001")
+print(paste("Significant in targeted only:",sig_results_counts["FALSE,TRUE"]))
+print(paste("Significant in untargeted only:",sig_results_counts["TRUE,FALSE"]))
+print(paste("Significant in both:",sig_results_counts["TRUE,TRUE"]))
+
+```
+
+As a more rigorous analysis, we use the meta-analyses to obtain useful statistics for comparison.
+
+```{r,out.height='50%',out.width='50%',message=FALSE,warning=FALSE}
 # Extract some useful statistics per analysis
-pvals_tar = sapply(meta_analysis_stats,function(x)x$re_model_tar$pval)
 
-pvals_untar = sapply(meta_analysis_stats,function(x)x$re_model_untar$pval)
-pvals_untar = unlist(pvals_untar[sapply(pvals_untar,length)>0])
-plot(-log10(pvals_untar),-log10(pvals_tar[names(pvals_untar)]))
-table(pvals_untar<0.001)
-table(pvals_tar<0.001,pvals_untar<0.001)
-
-
-I2_scores = sapply(meta_analysis_stats,function(x)x$re_model1$I2)
-
-hist(I2_scores)
-betas = sapply(meta_analysis_stats,function(x)x$re_model1$beta[1,1])
-betas = unlist(betas[names(I2_scores)])
-pvals = sapply(meta_analysis_stats,function(x)x$re_model1$pval)
-pvals = unlist(pvals[names(I2_scores)])
+# P-value for the difference between targeted and untargeted
 targeted_diff_p = 
   sapply(meta_analysis_stats,function(x)x$re_model2$pval[2])
-targeted_diff_p = unlist(targeted_diff_p[names(I2_scores)])
-plot(betas,I2_scores)
-plot(-log10(pvals),I2_scores)
-plot(-log10(targeted_diff_p),I2_scores)
-plot(-log10(targeted_diff_p),-log10(pvals))
-# plot examples
-agree_example = names(sample(which(pvals< 0.001 & I2_scores < 20))[1])
-forest(meta_analysis_stats[[agree_example]]$re_model1,
-       slab = meta_analysis_stats[[agree_example]][[1]][,1],
-       main = agree_example,xlab = "Log fc",
-       col = "blue",cex = 1.1)
-disagree_example = names(sample(which(targeted_diff_p< 0.001)))[1]
-forest(meta_analysis_stats[[disagree_example]]$re_model1,
-       slab = meta_analysis_stats[[disagree_example]][[1]][,1],
-       main = disagree_example,xlab = "Log fc",
-       col = "blue",cex = 1.1)
 
+# P-values - targeted vs. untargeted
+pvals_tar = sapply(meta_analysis_stats,function(x)x$re_model_tar$pval)
+pvals_untar = sapply(meta_analysis_stats,function(x)x$re_model_untar$pval)
+pvals_untar = unlist(pvals_untar[sapply(pvals_untar,length)>0])
+significant_in = rep("None",length(pvals_untar))
+significant_in[pvals_tar<0.001] = "Targeted"
+significant_in[pvals_untar<0.001] = "Untargeted"
+significant_in[pvals_tar<0.001 & pvals_untar<0.001] = "Both"
+significant_diff = targeted_diff_p<0.001
+df = data.frame(
+  targeted = -log10(pvals_tar),
+  untargeted = -log10(pvals_untar),
+  significant_in = significant_in,
+  significant_diff = significant_diff
+)
+rho = cor(pvals_tar,pvals_untar,method = "spearman")
+rhop = cor.test(pvals_tar,pvals_untar,method = "spearman")$p.value
+print(
+  ggplot(df, aes(x=targeted, y=untargeted,
+                 shape=significant_diff, color=significant_in)) +
+    geom_point() +
+    ggtitle(paste("-log10 p-values, spearman:",format(rho,digits=2),
+                  "(p=",format(rhop,digits=3),")"))
+)
+
+print("### Summary of differences in RE models ###")
+print("Model is significant at p<0.001:")
+print(table(df$significant_in))
+print("Adding is_targeted as a covariate has p<0.001:")
+print(table(df$significant_diff))
+
+# Betas - targeted vs. untargeted
+betas_tar = sapply(meta_analysis_stats,function(x)x$re_model_tar$beta[1,1])
+betas_untar = sapply(meta_analysis_stats,function(x)x$re_model_untar$beta[1,1])
+betas_untar = unlist(betas_untar[sapply(betas_untar,length)>0])
+df = data.frame(
+  targeted = betas_tar,
+  untargeted = betas_untar,
+  significant_in = significant_in,
+  significant_diff = significant_diff
+)
+rho = cor(betas_untar,betas_tar,method = "spearman")
+rhop = cor.test(betas_untar,betas_tar,method = "spearman")$p.value
+print(
+  ggplot(df, aes(x=targeted, y=untargeted,
+                 shape=significant_diff, color=significant_in)) +
+    geom_point() +
+    ggtitle(paste("Effect sizes, spearman:",format(rho,digits=2),
+                  "(p=",format(rhop,digits=3),")"))
+)
+```
+
+From the plots above we take the most extreme examples and examine their forest plots.
+
+```{r,out.height='50%',out.width='50%',message=FALSE,warning=FALSE}
+agree_example = names(sample(which(pvals_tar< 1e-10 & pvals_untar < 1e-10 &
+                                     targeted_diff_p > 0.1))[1])
+forest(meta_analysis_stats[[agree_example]]$re_model1,
+  slab = meta_analysis_stats[[agree_example]][[1]][,1],
+  main = paste(agree_example,"significant in both, tar and untar agree",sep="\n"),
+  xlab = "Log fc",col = "blue")
+
+agree_p_disagree_beta = names(sample(which(pvals_tar< 1e-10 & pvals_untar < 1e-10 &
+                                     targeted_diff_p < 0.001))[1])
+forest(meta_analysis_stats[[agree_p_disagree_beta]]$re_model1,
+  slab = meta_analysis_stats[[agree_p_disagree_beta]][[1]][,1],
+  main = paste(agree_p_disagree_beta,
+               "significant in both, tar and untar disagree",sep="\n"),
+  xlab = "Log fc",col = "blue")
+
+disagree_example1 = names(sample(which(pvals_tar< 1e-20 & pvals_untar >0.1))[1])
+forest(meta_analysis_stats[[disagree_example1]]$re_model1,
+  slab = meta_analysis_stats[[disagree_example1]][[1]][,1],
+  main = paste(disagree_example1,
+               "significant in both, tar and untar agree",sep="\n"),
+  xlab = "Log fc",col = "blue")
+
+
+disagree_example2 = names(sample(which(pvals_tar > 0.1 & pvals_untar < 1e-20))[1])
+forest(meta_analysis_stats[[disagree_example2]]$re_model1,
+  slab = meta_analysis_stats[[disagree_example2]][[1]][,1],
+  main = paste(disagree_example2,
+               "significant in both, tar and untar agree",sep="\n"),
+  xlab = "Log fc",col = "blue")
 
 ```
 
@@ -736,7 +844,7 @@ forest(meta_analysis_stats[[disagree_example]]$re_model1,
 
 Use 10-fold cross validation for analysis within tissues.
 
-```{r,fig.align="center",out.height='60%',out.width='60%',eval=FALSE}
+```{r,eval=FALSE,fig.align="center",out.height='60%',out.width='60%',eval=FALSE}
 nfolds = 10
 prediction_analysis_results = list()
 for(nn1 in names(metabolomics_processed_datasets)){
